--- a/src/index.css
+++ b/src/index.css
@@ -157,11 +157,16 @@ footer a:hover {
 
   /* src/styles/MovieDetails.css */
   .movie-details-card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    font-family: Arial, sans-serif;
+    min-width: 30rem;
+  width: 50vw;
+  /* padding: 1rem; */
+  background-color: var(--bg-clr);
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: 0.6fr 1fr;
+  /* align-items: center; */
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 2rem;
   }
   
   .card-content {
