--- a/src/styles/movie.css
+++ b/src/styles/movie.css
@@ -1,10 +1,10 @@
-/* Modal Overlay */
+/* Filter Modal Overlay */
 .filter-modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
@@ -12,7 +12,7 @@
   z-index: 1000;
 }
 
-/* Modal Content */
+/* Filter Modal Content */
 .filter-modal-content {
   background-color: white;
   padding: 20px;
@@ -37,13 +37,4 @@
   font-size: 14px;
   border-radius: 5px;
   border: 1px solid #ddd;
-}
-
-.filter-group input[type="number"] {
-  width: calc(50% - 5px);
-  display: inline-block;
-}
-
-.filter-group input[type="number"]:last-child {
-  margin-left: 10px;
 }
